# protobuf-C-Java

./: README.md
MegBot/: CMakeLists.txt  http_demo.cpp
MegBot/proto/: http.proto
Server/: pom.xml
Server/src/main/java/cn/chennan/server/: ServerApplication.java
Server/src/main/java/cn/chennan/server/controller/: HttpController.java
Server/src/main/java/cn/chennan/server/proto/: Http.java
Server/src/main/resources/cn/chennan/server/: http.proto
